Clean up notecards notice; fix issues of closing filebrowser on safari

--- a/web-portal/stylesheets/style.css
+++ b/web-portal/stylesheets/style.css
@@ -284,16 +284,19 @@ h2 {
     border-style: double;
     border-width: 5px;
     border-color: #C0C0C0;
+    padding: 1em;
 }
 
 #dev-div-checkbox .jumbotron {
     padding-bottom: 0em;
+    font-size: 18px;
 }
 
 #dev-div-buttons .jumbotron {
     padding-bottom: 0.25em;
     padding-top: 0.25em;
     display:inline-block;
+    font-size:16px    
 }
 
 h2 {
@@ -382,4 +385,23 @@ h2 {
 
 #combined-msg-div .combined-header {
    font-weight:bold;
+}
+
+#notecards-msg-div {
+  margin:2em;
+  padding: 1em;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #C0C0C0;
+  text-align: left;
+  line-height:1.25;
+}
+
+#notecards-msg-div .combined-header {
+   font-weight:bold;
+   text-align: center;
+}
+
+#nc_do_not_checkbox_div {
+  margin-top: 1em;
 }
